k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: palm-cafe
  namespace: palm-cafe
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: nginx
  rules:
    - host: app.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: palm-cafe-api
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: palm-cafe-ui
                port:
                  number: 80
